// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Administration should render correctly 1`] = `
<div
  className="administration"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <h3>
    Fund Administration
  </h3>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Enable subscription
  </Button>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Convert unclaimed rewards: 0 
    MLN
  </Button>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Irreversibly shut down fund
  </Button>
</div>
`;

exports[`Administration should render correctly with loading 1`] = `
<div
  className="administration"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <h3>
    Fund Administration
  </h3>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Enable subscription
  </Button>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Convert unclaimed rewards: 0 
    MLN
  </Button>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Irreversibly shut down fund
  </Button>
  <p>
    Please wait for upcoming Metamask popup
  </p>
</div>
`;

exports[`Administration should render correctly with subscriptionAllowed 1`] = `
<div
  className="administration"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <h3>
    Fund Administration
  </h3>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Disable subscription
  </Button>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Convert unclaimed rewards: 0 
    MLN
  </Button>
  <Button
    onClick={[Function]}
    style="clear"
  >
    Irreversibly shut down fund
  </Button>
</div>
`;
